fix: update html

--- a/博客介绍-MD-Pro插件-富文本版.html
+++ b/博客介绍-MD-Pro插件-富文本版.html
@@ -112,8 +112,7 @@
             <h4 style="color: #7e22ce; margin-top: 0;">方法二：GitHub 拉取本地安装</h4>
             <p><strong>1. 获取代码</strong></p>
             <ul style="list-style-type: none; padding-left: 0;">
-                <li class="list-item">⭐ <strong>GitHub</strong>: <span style="color: #9333ea;">github.com/Teernage/md-pro</span></li>
-                <li class="list-item">🚀 <strong>Gitee</strong>: <span style="color: #9333ea;">gitee.com/xuzhenxin11...</span></li>
+                <li class="list-item">⭐ <strong>GitHub</strong>: <span style="color: #9333ea;">https://github.com/tingyu9315/md-pro</span></li>
             </ul>
             <p><strong>2. 安装步骤</strong></p>
             <ol style="padding-left: 20px;">
